--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <input type="color" name="color" id="color">
         <br><br>
         <label for="date">Date:</label>
-        <input type="date" name="" id="" required>
+        <input type="date" name="date" id="date" required>
         <br><br>
         <label for="file">Select File:</label>
         <input type="file" name="file" id="file">
@@ -152,11 +152,11 @@
         <button type="reset">Clear Form</button>
     </form>
 
-    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545905773084!2d90.22017124347119!3d23.877324553770976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1688309646181!5m2!1sen!2sbd" width="640" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545905773084!2d90.22017124347119!3d23.877324553770976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1688309646181!5m2!1sen!2sbd" width="640" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="map of my address"></iframe>
     <br/> <br/>
-    <iframe src="http://studentportal.diu.edu.bd/" frameborder="0" height="360" width="640"></iframe>
+    <iframe src="http://studentportal.diu.edu.bd/" frameborder="0" height="360" width="640" title="DIU Student Portal Website"></iframe>
     <br/> <br/>
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/_uQrJ0TkZlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/_uQrJ0TkZlc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br><br>
     <video src="./video/video.mp4" controls></video>
     <a href="./video/video.mp4" download>Download 360p</a> -->
@@ -166,11 +166,11 @@
     <!-- footer section starts -->
     <p>✅ Develope with &hearts; with Nure Alom</p>
     <p>Copyright &copy; 2023</p>
-    <a href="https://www.facebook.com/rootnure/" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://www.github.com/rootnure/" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a name="social-fb" title="social-fb" href="https://www.facebook.com/rootnure/" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a name="social-yt" title="social-yt" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a name="social-li" title="social-li" href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a name="social-gh" title="social-gh" href="https://www.github.com/rootnure/" target="_blank"><i class="fab fa-github"></i></a>
+    <a name="social-tw" title="social-tw" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
     
     <!-- footer section ends -->
 </body>
